<resources>
    <string name="app_name">tp2</string>
    <string name="name">name</string>
    <string name="firstname">firstname</string>
    <string name="sexe">sexe</string>
    <string name="email">email</string>
    <string name="age">age</string>
    <string name="level">level</string>
    <string name="active">active</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string-array name="levels">
        <item name="beginner">Beginner</item>
        <item name="intermediate">Intermediate</item>
        <item name="advanced">Advanced</item>
    </string-array>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add">Add</string>

    <string name="sexe_message">Vous n\'avez pas choisi de sexe</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="bAddClient">Ajouter un client</string>
    <string name="bListerClients">Lister les clients</string>

    <string name="description">photo du client</string>
</resources>