<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".AddClientActivity">

        <TextView
            android:id="@+id/tname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/name" />

        <EditText
            android:id="@+id/ename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:nextFocusForward="@id/efirstname" />

        <TextView
            android:id="@+id/tfirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/firstname" />

        <EditText
            android:id="@+id/efirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:nextFocusForward="@id/rbmale" />

        <TextView
            android:id="@+id/tsexe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/sexe" />

        <RadioGroup
            android:id="@+id/rgsexe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbmale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:nextFocusForward="@id/rbfemale"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rbfemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:nextFocusForward="@id/eemail"
                android:text="@string/female" />
        </RadioGroup>

        <TextView
            android:id="@+id/temail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/email" />

        <EditText
            android:id="@+id/eemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textWebEmailAddress"
            android:nextFocusForward="@id/sbage" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/age" />

        <LinearLayout
            android:id="@+id/lage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/activity_horizontal_margin" />

            <SeekBar
                android:id="@+id/sbage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:nextFocusRight="@id/slevel" />

        </LinearLayout>

        <TextView
            android:id="@+id/tlevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/level" />

        <Spinner
            android:id="@+id/slevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:entries="@array/levels"
            android:nextFocusForward="@id/sactive" />

        <TextView
            android:id="@+id/tactive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/active" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sactive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="start"
            android:nextFocusForward="@id/badd"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textOff="@string/no"
            android:textOn="@string/yes" />

        <Button
            android:id="@+id/badd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addClient"
            android:text="@string/add" />
    </LinearLayout>
</ScrollView>